--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -682,113 +682,6 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-t3slENqBXI {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #232323;
-}
-.cid-t3slENqBXI .carousel {
-  height: 800px;
-}
-.cid-t3slENqBXI .carousel img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.cid-t3slENqBXI .carousel-item,
-.cid-t3slENqBXI .carousel-inner {
-  height: 100%;
-}
-.cid-t3slENqBXI .carousel-caption {
-  bottom: 40px;
-}
-.cid-t3slENqBXI .mobi-mbri-arrow-next {
-  margin-left: 5px;
-}
-.cid-t3slENqBXI .mobi-mbri-arrow-prev {
-  margin-right: 5px;
-}
-.cid-t3slENqBXI .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-.cid-t3slENqBXI .item-wrapper {
-  width: 100%;
-}
-@media (max-width: 767px) {
-  .cid-t3slENqBXI .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-t3slENqBXI .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-t3slENqBXI .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-t3slENqBXI .carousel-control {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-t3slENqBXI .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-t3slENqBXI .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-t3slENqBXI .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-t3slENqBXI .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-t3slENqBXI .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-t3slENqBXI .carousel-indicators li.active,
-.cid-t3slENqBXI .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-t3slENqBXI .carousel-indicators li::after,
-.cid-t3slENqBXI .carousel-indicators li::before {
-  content: none;
-}
-.cid-t3slENqBXI .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-t3slENqBXI .carousel-indicators {
-    display: none !important;
-  }
-}
 .cid-t3sjqFOAcg {
   z-index: 1000;
   width: 100%;
@@ -1143,6 +1036,50 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-t3sMo7CGLd {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-t3sMo7CGLd img,
+.cid-t3sMo7CGLd .item-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-t3sMo7CGLd .item:focus,
+.cid-t3sMo7CGLd span:focus {
+  outline: none;
+}
+.cid-t3sMo7CGLd .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+  position: relative;
+}
+.cid-t3sMo7CGLd .item-wrapper {
+  position: unset;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-t3sMo7CGLd .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-t3sMo7CGLd .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-t3sMo7CGLd .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-t3sMo7CGLd .mbr-section-title {
+  color: #232323;
 }
 .cid-t3slytF2Gx {
   padding-top: 10rem;
